--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
             <ul class="nav-links">
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="">Уровни английского</a></li>
-                <li><a href="">Наши игры</a></li>
-                <li><a href="">Обратная связь</a></li>
+                <li><a href="#levels">Уровни английского</a></li>
+                <li><a href="#game">Наши игры</a></li>
+                <li><a href="#contacts">Обратная связь</a></li>
             </ul>
         </nav>
 
@@ -62,7 +62,7 @@
     </header>
 
 
-    <section class="info_section">
+    <section class="info_section" id="levels">
         <section class="timeline_section">
             <h2 class="timeline_title">Уровень знания Английского</h2>
             <div class="timeline">
@@ -245,7 +245,7 @@
 
     </section>
 
-    <footer class="footer">
+    <footer class="footer" id="contacts">
         <div class="footer-content">
             <div class="footer-section about">
                 <h3>О нас</h3>
